# my_rag

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.milvus.yml  docker-compose.yml  pyproject.toml  requirements.txt  面试细节-prompt
benchmarks/: PERFORMANCE_REPORT.md  perf_benchmark.py
deploy/grafana/: dashboard.json
deploy/mysql/: my.cnf
deploy/prometheus/: prometheus.yml
docs/: DESIGN.md
my_rag/: __init__.py  main.py
my_rag/api/middleware/: tracing.py
my_rag/api/routes/: __init__.py  chat.py  document.py  evaluation.py  health.py  knowledge.py  metrics.py  notification.py  search.py  websocket.py
my_rag/api/schemas/: __init__.py  chat.py  common.py  document.py  knowledge.py  notification.py  search.py
my_rag/config/: __init__.py  settings.py
my_rag/core/: corrective_rag.py  dependencies.py  document_pipeline.py  rag_pipeline.py  self_rag.py  semantic_cache.py
my_rag/domain/: models.py
my_rag/domain/chunking/: __init__.py  base.py  factory.py  fixed_chunker.py  parent_child_chunker.py  recursive_chunker.py
my_rag/evaluation/: dataset-huggingface.py  dataset.py  dataset_generator.py  evaluator.py  hotpotqa_loader.py  metrics.py
my_rag/templates/: index.html
my_rag/utils/: concurrency.py  logger.py  metrics.py  token_counter.py  tracing.py
tests/: conftest.py  test_chunkers.py  test_corrective_rag.py  test_evaluation.py  test_knowledge_profiles.py  test_milvus_hybrid_retriever.py  test_parsers.py  test_prompt_template.py  test_query_rewriter.py  test_rag_pipeline.py  test_rrf.py  test_semantic_cache.py
(+42 files in other folders)
